# avicoin

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml  e2e_tests.sh  rulesync.jsonc
.github/workflows/: rust-tests.yml
docs/: ROADMAP.md
src/: block.rs  block_storage.rs  byte_reader.rs  configs.rs  main.rs  miner.rs  protocol.rs  transaction.rs  util.rs  wallet.rs
src/messages/: message.rs  mod.rs  ping.rs  pong.rs
tests/: test_e2e.py
